Moved Nav Chevron a little bit to the left, to prevent overlap with scrollbar.

--- a/src/stylesheets/Navbar.scss
+++ b/src/stylesheets/Navbar.scss
@@ -6,7 +6,7 @@
 
 .navbar-button {
   position: fixed;
-  right: 0;
+  right: 0.5%;
   color: black;
   font-size: 5vw;
   background-color: transparent;
